@@ -203,6 +203,11 @@ def go_local_libs(self):
 			if isinstance(lnk_task, (go, gopackage)):
 				# handle hierarchical packages
 				path = lnk_task.generator.path.get_bld().abspath()
+			elif isinstance(lnk_task, (cgopackage,)):
+				# handle hierarchical cgopackages
+				cgo_obj_dir = lnk_task.outputs[1].find_dir('_obj')
+				if cgo_obj_dir:
+					path = cgo_obj_dir.abspath()
 			self.env.append_unique('GOCFLAGS', ['-I%s' % path])
 			self.env.append_unique('GOLFLAGS', ['-L%s' % path])
 		for n in getattr(tg, 'includes_nodes', []):
